# CUBIC-informatics

./: .gitignore  CMakeLists.txt  Dockerfile  HDoG_gpu.py  HalfBrainCells.py  LICENSE  MultiChannelVerification.py  README.md  config_scalemerge_example.json  demo.ipynb  docker-compose.yml  param_example_classify.json  param_example_mapping.json  requirements.txt
param/: param_example_HDoG_FW.json  param_example_HDoG_RV.json  param_example_classify.json  param_example_mapping.json  param_example_mergebrain.json  param_example_multichannel.json
script/: AtlasMapping.py  HDoG_classifier.py  HDoG_cpu.py  HDoG_gpu.py  HDoG_intermediate.py  HalfBrainCells.py  HalfBrainImages.py  MergeBrain.py  MultiChannelVerification.py  ScaleMerge.jl  bin2tif.py  evaluation.py  tif2bin.py
src/3D/: CCL3D.cu  CCL3D.cuh  CMakeLists.txt  DoG3DFilter.cu  DoG3DFilter.cuh  Eigenvalues.cu  Eigenvalues.cuh  Erosion3DFilter.cu  Erosion3DFilter.cuh  HDoG3D_main.cpp  HDoG3D_main2.cpp  Hessian3DFilter.cu  Hessian3DFilter.cuh  Hessian3DFilter_element.cu  Hessian3DFilter_element.cuh  NormalizeFilter.cu  NormalizeFilter.cuh  RegionalFeatures.cu  RegionalFeatures.cuh  utils.h
src/ScaleMerge/: CMakeLists.txt  ScaleMerge.cpp
src/util/: CMakeLists.txt  MaxIntensity.cu  MaxIntensity.cuh  MaxIntensityForImages.cpp  ParameterSearch.cpp
test/: AverageNormalized_test.cpp  CCL_test.cpp  CMakeLists.txt  DoG_test.cpp  Hessian_half_test.cpp  Hessian_test.cpp  MaxNormalized_test.cpp  Normalize_test.cpp  Regional_half_test.cpp  Regional_test.cpp
